<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorblack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/LabelApp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.062"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/name1"
                        android:layout_width="134dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Nama"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_marginLeft="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text1"
                        app:layout_constraintVertical_bias="0.192"/>

                    <EditText android:id="@+id/name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:ems="10"
                        android:hint="@string/InsertNama"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.944"
                        app:layout_constraintStart_toStartOf="@id/name1"
                        app:layout_constraintTop_toBottomOf="@+id/text1"
                        app:layout_constraintVertical_bias="0.123"/>


                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/alamat1"
                        android:layout_width="134dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Alamat"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_marginLeft="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text1"
                        app:layout_constraintVertical_bias="0.192"/>

                    <EditText android:id="@+id/alamat2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:ems="10"
                        android:hint="@string/InsertAlamat"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.944"
                        app:layout_constraintStart_toStartOf="@id/alamat1"
                        app:layout_constraintTop_toBottomOf="@+id/text1"
                        app:layout_constraintVertical_bias="0.123"/>


                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tlp1"
                        android:layout_width="134dp"
                        android:layout_height="wrap_content"
                        android:text="@string/No_tlp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_marginLeft="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text1"
                        app:layout_constraintVertical_bias="0.192"/>

                    <EditText android:id="@+id/tlp2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:ems="10"
                        android:hint="@string/InsertTelepon"
                        android:inputType="phone"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.944"
                        app:layout_constraintStart_toStartOf="@id/tlp1"
                        app:layout_constraintTop_toBottomOf="@+id/text1"
                        app:layout_constraintVertical_bias="0.123"/>


                </TableRow>

            </TableLayout>


            <Button
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="140dp"
                android:text="@string/Daftar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.971"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.971" />


        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>